refactor(vscode-config): 移除VS Code配置文件并更新Java核心模块
• 删除所有.vscode目录下的配置文件（extensions.json, launch.json等）
• 统一使用UTF-8编码处理文件读写操作
• 调整module-info.java依赖顺序并更新pom.xml编译配置

涉及核心文件：FileStore.java、InferConfig.java及测试文件编码兼容性优化